5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1601_1802.log
== TEST (2019-04-01 17:24:13) 
-- CODE:
a= int(float("digite um numero:"))
D1= int(float("digite um numero:"))
D2= int(float("digite um numero:"))
d= m.sqrt(5*D1=(m.pi**D2/3))
e=a - d
print(int(e+1))
-- ERROR:
File "XXXX", line 4
    d= m.sqrt(5*D1=(m.pi**D2/3))
             ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:25:18) 
-- CODE:
a= int(float("digite um numero:"))
D1= int(float("digite um numero:"))
D2= int(float("digite um numero:"))
d= m.sqrt(5*D1=(m.pi**D2/3))
e=a - d
print(int(e+1))
-- ERROR:
File "XXXX", line 4
    d= m.sqrt(5*D1=(m.pi**D2/3))
             ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:25:41) 
-- CODE:
inicial_HP= int(float("digite um numero:"))
D1= int(float("digite um numero:"))
D2= int(float("digite um numero:"))
d= m.sqrt(5*D1=(m.pi**D2/3))
e=a - d
print(int(e+1))
-- ERROR:
File "XXXX", line 4
    d= m.sqrt(5*D1=(m.pi**D2/3))
             ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 21:43:35) 
-- CODE:
vn= int(float("pontos de vida inicial:"))
D1= int(float("valor do lancamento:"))
D2= int(float("valor do lancamento:"))
d= m.sqrt(5*D1=(m.pi**D2/3))


-- ERROR:
File "XXXX", line 4
    d= m.sqrt(5*D1=(m.pi**D2/3))
             ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 21:43:41) 
-- CODE:
vn= int(float("pontos de vida inicial:"))
D1= int(float("valor do lancamento:"))
D2= int(float("valor do lancamento:"))
d= m.sqrt(5*D1=(m.pi**D2/3))


-- ERROR:
File "XXXX", line 4
    d= m.sqrt(5*D1=(m.pi**D2/3))
             ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 22:05:55) 
-- CODE:
vn= int(float("pontos de vida inicial:"))
D1= int(float("valor do lancamento:"))
D2= int(float("valor do lancamento:"))
d= m.sqrt(5*D1)+(m.pi**D2/3)
atual=vn-d
print(int(atual+1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vn= int(float("pontos de vida inicial:"))
ValueError: could not convert string to float: 'pontos de vida inicial:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 22:06:37) 
-- CODE:
vn= int(input("pontos de vida inicial:"))
D1= int(input("valor do lancamento:"))
D2= int(input("valor do lancamento:"))
d= m.sqrt(5*D1)+(m.pi**D2/3)
atual=vn-d
print(int(atual+1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d= m.sqrt(5*D1)+(m.pi**D2/3)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 22:07:27) 
-- CODE:
vn= int(input("pontos de vida inicial:"))
D1= int(input("valor do lancamento:"))
D2= int(input("valor do lancamento:"))
d= sqrt(5*D1)+(m.pi**D2/3)
atual=vn-d
print(int(atual+1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d= sqrt(5*D1)+(m.pi**D2/3)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 22:07:53) 
-- CODE:
vn= int(input("pontos de vida inicial:"))
D1= int(input("valor do lancamento:"))
D2= int(input("valor do lancamento:"))
d = sqrt(5*D1)+(m.pi**D2/3)
atual=vn-d
print(int(atual+1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = sqrt(5*D1)+(m.pi**D2/3)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 22:20:24) 
-- CODE:
vn= int(input("pontos de vida inicial:"))
D1= int(input("valor do lancamento:"))
D2= int(input("valor do lancamento:"))
d = m.sqrt(5*D1)+(m.pi**D2/3)

atual=vn-d
print(int(atual+1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = m.sqrt(5*D1)+(m.pi**D2/3)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 22:20:55) 
-- CODE:
vn= int(input("pontos de vida inicial:"))
D1= int(input("valor do lancamento:"))
D2= int(input("valor do lancamento:"))
dano = m.sqrt(5*D1)+(m.pi**D2/3)

atual=vn-dano
print(int(atual+1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dano = m.sqrt(5*D1)+(m.pi**D2/3)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 22:21:25) 
-- CODE:
vn= int(input("pontos de vida inicial:"))
D1= int(input("valor do lancamento:"))
D2= int(input("valor do lancamento:"))
dano = (m.sqrt5*D1)+(m.pi**D2/3)

atual=vn-dano
print(int(atual+1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dano = (m.sqrt5*D1)+(m.pi**D2/3)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 22:22:26) 
-- CODE:
vn= int(input("pontos de vida inicial:"))
D1= int(input("valor do lancamento:"))
D2= int(input("valor do lancamento:"))
dano = m.sqrt(5*D1)+(m.pi*D2/3)

atual=vn-dano
print(int(atual+1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dano = m.sqrt(5*D1)+(m.pi*D2/3)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 22:23:55) 
-- CODE:
vn= int(input("pontos de vida inicial:"))
D1= int(input("valor do lancamento:"))
D2= int(input("valor do lancamento:"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))

atual= vn-dano
print(int(atual+1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dano = m.sqrt(5*D1)+(m.pi**(D2/3))
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 22:26:36) 
-- CODE:
import math as m
vn= int(input("pontos de vida inicial:"))
D1= int(input("valor do lancamento:"))
D2= int(input("valor do lancamento:"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))

atual= vn - dano
print(int(atual+1))


-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 22:28:17) 
-- CODE:
import math as m
vn= int(input("pontos de vida inicial:"))
D1= int(input("valor do lancamento:"))
D2= int(input("valor do lancamento:"))
d = m.sqrt(5*D1)+(m.pi**(D2/3))

atual= vn - d
print(int(atual+1))


-- EXECUTION TIME:
0.207519
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
